--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 
 #encase{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: fit-content;
