--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #262AA8;
+    background-color: #262aa8;
 }
 
-#encase{
+#encase {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,24 +16,24 @@ body{
     width: 800px;
     background-color: #175873;
     border-radius: 30px;
-    border-left:50px solid #175873;
-    border-right:50px solid #175873;
-    border-top:50px solid #175873;
+    border-left: 50px solid #175873;
+    border-right: 50px solid #175873;
+    border-top: 50px solid #175873;
 }
 
-#listOfToDoItems{
+#listOfToDoItems {
     display: flex;
     flex-direction: column;
 }
 
-.listItem{
+.listItem {
     min-height: 100px;
     padding: 0;
     margin: 20px;
     width: 600px !important;
-    overflow-wrap: break-word ;
-    background-color: #87ACA3;
-    border: #87ACA3 solid 20px;
+    overflow-wrap: break-word;
+    background-color: #87aca3;
+    border: #87aca3 solid 20px;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
@@ -41,14 +41,14 @@ body{
     align-items: center;
 }
 
-.listItem button{
+.listItem button {
     width: 25%;
     height: 30px;
     border: solid 1px black;
     border-radius: 5px;
 }
 
-#editTextBox{
+#editTextBox {
     height: 0;
     width: 0;
     overflow: hidden;
@@ -56,18 +56,18 @@ body{
     left: 50%;
 }
 
-.col{
+.col {
     display: flex;
     flex-direction: col;
 }
 
-.row{
+.row {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.editTextBoxElement{
+.editTextBoxElement {
     height: 0;
     width: 0;
     overflow: hidden;
@@ -76,17 +76,17 @@ body{
 textarea::-webkit-scrollbar {
     width: 12px;
 }
- 
+
 textarea::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-}
- 
-textarea::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
-textarea{
+textarea::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+textarea {
     box-shadow: 0px;
 }
