--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,45 @@ textarea {
     cursor: pointer;
 }
 
-#part{
+#part {
     border: solid 2px aquamarine;
 }
 
-#amenities{
+#amenities {
     display: flex;
     flex-direction: row;
 }
+
+/* CSS to style the reminder palette/modal and overlay */
+#reminderPalette {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#reminderOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    z-index: 1;
+}
+
+#reminderContent {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    z-index: 2;
+    width: 400px;
+    max-width: 90%;
+}
+
+/* Add any additional styling for the reminder content */
