--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #262aa8;
+    background: #58a5ff;
     height: fit-content;
 }
 
@@ -15,11 +15,11 @@ body {
     height: fit-content;
     min-height: 100px;
     width: 1000px;
-    background-color: #cfe9ff;
     border-radius: 30px;
-    border-left: 50px solid #cfe9ff;
-    border-right: 50px solid #cfe9ff;
-    border-top: 50px solid #cfe9ff;
+    background-color: #ecf4ff; 
+    border-left: 50px solid #ecf4ff;
+    border-right: 50px solid #ecf4ff;
+    border-top: 50px solid #ecf4ff; 
 }
 
 #encase div {
@@ -201,7 +201,7 @@ button#filterMediumPriority {
 
 /* Specific CSS for Low Priority Button */
 button#filterLowPriority {
-    background-color: #28a745; /* Green color for low priority */
+    background-color: #7ead89; /* Green color for low priority */
 }
 
 /* CSS for Show All Tasks Button */
@@ -487,3 +487,19 @@ select:disabled {
   #submitButton:hover {
     background-color: #0056b3; /* Darker blue on hover */
   }
+
+  /* Add Subtask button styles */
+.addSubtaskButton {
+    background-color: #9604a9; /* Brighter yellow background color */
+    color: #fff; /* Black text color */
+    border: none; /* Remove the button border */
+    padding: 10px 20px; /* Add padding to create some space around the text */
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer; /* Change cursor to a hand on hover */
+  }
+  
+  /* Add Subtask button hover effect */
+  .addSubtaskButton:hover {
+    background-color: #2f8203b0; /* Darker blue background color on hover */
+  }
+  
