--- a/styles.css
+++ b/styles.css
@@ -16,23 +16,20 @@ body {
     min-height: 100px;
     width: 1000px;
     border-radius: 30px;
-    background-color: #ecf4ff; 
+    background-color: #ecf4ff;
     border-left: 50px solid #ecf4ff;
     border-right: 50px solid #ecf4ff;
-    border-top: 50px solid #ecf4ff; 
+    border-top: 50px solid #ecf4ff;
 }
 
 #encase div {
     margin: 5px;
 }
 
-/* Styling for the labels */
 label {
-    /* Set the font size and line height */
     font-size: 16px;
     line-height: 1.5;
 
-    /* Add some margin to create space between the labels and the associated inputs */
     margin-bottom: 8px;
     display: block;
 }
@@ -142,7 +139,6 @@ textarea {
     flex-direction: row;
 }
 
-/* CSS to style the reminder palette/modal and overlay */
 #reminderPalette {
     position: fixed;
     top: 0;
@@ -157,7 +153,7 @@ textarea {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
@@ -174,100 +170,83 @@ textarea {
     max-width: 90%;
 }
 
-/* Add any additional styling for the reminder content */
-
-/* CSS for Priority Buttons */
 button#filterHighPriority,
 button#filterMediumPriority,
 button#filterLowPriority {
-    background-color: #007bff; /* Blue color for high priority */
-    color: #fff; /* White text color */
-    border: none; /* Remove button border */
-    padding: 10px 20px; /* Add padding */
-    margin-right: 5px; /* Add some spacing between buttons */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Add rounded corners */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 5px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-/* Specific CSS for High Priority Button */
 button#filterHighPriority {
-    background-color: #f44336; /* Red color for high priority */
+    background-color: #f44336;
 }
 
-/* Specific CSS for Medium Priority Button */
 button#filterMediumPriority {
-    background-color: #ffc107; /* Yellow color for medium priority */
+    background-color: #ffc107;
 }
 
-/* Specific CSS for Low Priority Button */
 button#filterLowPriority {
-    background-color: #7ead89; /* Green color for low priority */
+    background-color: #7ead89;
 }
 
-/* CSS for Show All Tasks Button */
 button#showAllTasksButton {
-    background-color: #6c757d; /* Gray color for show all tasks button */
-    color: #fff; /* White text color */
-    border: none; /* Remove button border */
-    padding: 10px 20px; /* Add padding */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Add rounded corners */
+    background-color: #6c757d;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-/* CSS for Create Reminder Button */
 button#createReminderButton {
-    background-color: #007bff; /* Blue color for the button */
-    color: #fff; /* White text color */
-    border: none; /* Remove button border */
-    padding: 10px 20px; /* Add padding */
-    margin-top: 20px; /* Add margin from the content above */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Add rounded corners */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-/* Hover effect */
 button#createReminderButton:hover {
-    background-color: #0056b3; /* Darker blue color on hover */
+    background-color: #0056b3;
 }
 
-/* Active/focus effect */
 button#createReminderButton:focus {
-    outline: none; /* Remove the default outline */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Add a subtle box shadow on focus */
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-/* If you want to style the button when it's pressed */
 button#createReminderButton:active {
-    background-color: grey; /* Darker blue color on hover */
-    /* Add your styles here */
+    background-color: grey;
 }
 
-/* CSS for Create to do Button */
 button#createToDo {
-    background-color: #007bff; /* Blue color for the button */
-    color: #fff; /* White text color */
-    border: none; /* Remove button border */
-    padding: 10px 20px; /* Add padding */
-    margin-top: 20px; /* Add margin from the content above */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Add rounded corners */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-/* Hover effect */
 button#createToDo:hover {
-    background-color: #0056b3; /* Darker blue color on hover */
+    background-color: #0056b3;
 }
 
-/* Active/focus effect */
 button#createToDo:focus {
-    outline: none; /* Remove the default outline */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Add a subtle box shadow on focus */
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-/* If you want to style the button when it's pressed */
 button#createToDo:active {
-    background-color: grey; /* Darker blue color on hover */
-    /* Add your styles here */
+    background-color: grey;
 }
 
 #toDoOverlay {
@@ -276,7 +255,7 @@ button#createToDo:active {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
@@ -301,220 +280,162 @@ button#createToDo:active {
     margin-bottom: 50px;
 }
 
-/* Styling for input boxes of type datetime-local */
 input {
-    /* Set the font size and line height */
     font-size: 16px;
     line-height: 1.5;
-
-    /* Add some padding to create some space between the text and the border */
     padding: 8px 12px;
-
-    /* Set the border to a solid color and rounded corners */
     border: 1px solid #ccc;
     border-radius: 4px;
-
-    /* Add a box-shadow to give it a subtle 3D effect */
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-
-    /* Add a transition effect for smoother interactions */
     transition: border-color 0.2s ease-in-out;
 }
 
-/* Apply additional styles when the input is focused */
 input:focus {
-    /* Change the border color to a more noticeable color */
-    border-color: #007bff; /* Replace with your preferred focus color */
-    outline: none; /* Remove the default focus outline */
+    border-color: #007bff;
+    outline: none;
 }
 
-/* Apply styles when the input is disabled */
 input:disabled {
-    background-color: #f8f9fa; /* Replace with your preferred disabled background color */
+    background-color: #f8f9fa;
     cursor: not-allowed;
 }
 
-/* Style the select element */
 select {
-    /* Set the font size and line height */
     font-size: 16px;
     line-height: 1.5;
-
-    /* Add some padding to create some space between the text and the border */
     padding: 8px 12px;
-
-    /* Set the border to a solid color and rounded corners */
     border: 1px solid #ccc;
     border-radius: 4px;
-
-    /* Add a box-shadow to give it a subtle 3D effect */
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-
-    /* Set the appearance to none to remove default styles in some browsers */
     appearance: none;
-
-    /* Add a transition effect for smoother interactions */
     transition: border-color 0.2s ease-in-out;
 }
 
-/* Apply additional styles when the select element is focused */
 select:focus {
-    /* Change the border color to a more noticeable color */
-    border-color: #007bff; /* Replace with your preferred focus color */
-    outline: none; /* Remove the default focus outline */
+    border-color: #007bff;
+    outline: none;
 }
 
-/* Apply styles when the select element is disabled */
 select:disabled {
-    background-color: #f8f9fa; /* Replace with your preferred disabled background color */
+    background-color: #f8f9fa;
     cursor: not-allowed;
 }
 
-/* Styling for the buttons inside the buttonDiv */
 #buttonDiv {
     display: flex;
-    justify-content: center; /* Center the buttons horizontally */
-    margin-bottom: 20px; /* Add some spacing at the bottom */
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
-/* Style the buttons */
 #buttonDiv button {
-    /* Set the font size and line height */
     font-size: 16px;
     line-height: 1.5;
-
-    /* Add some padding to create some space between the text and the button border */
     padding: 10px 20px;
-
-    /* Set the background color */
-    background-color: #007bff; /* Replace with your preferred button background color */
-    color: #fff; /* Set the text color to white for better contrast */
-
-    /* Set the border to none to remove the default button border */
+    background-color: #007bff;
+    color: #fff;
     border: none;
-
-    /* Add a box-shadow to give it a subtle 3D effect */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
-    /* Add a transition effect for smoother interactions */
     transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-/* Apply additional styles when the button is hovered */
 #buttonDiv button:hover {
-    /* Darken the background color on hover */
-    background-color: #0056b3; /* Replace with a slightly darker shade of the button color */
+    background-color: #0056b3;
     cursor: pointer;
 }
 
-/* Apply additional styles when the button is focused */
 #buttonDiv button:focus {
-    outline: none; /* Remove the default focus outline */
-    /* You can add additional styles here if needed */
+    outline: none;
 }
 
-/* Apply additional styles when the button is active (clicked) */
 #buttonDiv button:active {
-    /* Darken the background color when the button is clicked */
-    background-color: #003974; /* Replace with a darker shade of the button color */
+    background-color: #003974;
 }
 
-/* Style the buttons when they are in a disabled state */
 #buttonDiv button:disabled {
-    background-color: #ccc; /* Replace with your preferred disabled background color */
-    color: #999; /* Replace with your preferred disabled text color */
+    background-color: #ccc;
+    color: #999;
     cursor: not-allowed;
 }
 
-/* Adjust the margin between the buttons */
 #buttonDiv button:not(:last-child) {
     margin-right: 10px;
 }
 
-/* Styling for Save Reminder button */
 #saveReminderButton {
-    background-color: #4caf50; /* Green background color */
-    color: white; /* White text color */
-    border: none; /* No border */
-    padding: 10px 20px; /* Add some padding */
-    margin-right: 10px; /* Add some space between buttons */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Rounded corners */
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 #saveReminderButton:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #45a049;
 }
 
-/* Styling for Cancel button */
 #cancelReminderButton {
-    background-color: #f44336; /* Red background color */
-    color: white; /* White text color */
-    border: none; /* No border */
-    padding: 10px 20px; /* Add some padding */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Rounded corners */
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 #cancelReminderButton:hover {
-    background-color: #d32f2f; /* Darker red on hover */
+    background-color: #d32f2f;
 }
 
-/* Styling for Cancel To-Do button */
 #cancelToDoButton {
-    background-color: #f44336; /* Red background color */
-    color: white; /* White text color */
-    border: none; /* No border */
-    padding: 10px 20px; /* Add some padding */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Rounded corners */
-  }
-  
-  #cancelToDoButton:hover {
-    background-color: #d32f2f; /* Darker red on hover */
-  }
-  
-  /* Styling for Submit button */
-  #submitButton {
-    background-color: #007bff; /* Blue background color */
-    color: white; /* White text color */
-    border: none; /* No border */
-    padding: 10px 20px; /* Add some padding */
-    cursor: pointer; /* Add a pointer cursor on hover */
-    border-radius: 5px; /* Rounded corners */
-  }
-  
-  #submitButton:hover {
-    background-color: #0056b3; /* Darker blue on hover */
-  }
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
 
-  /* Add Subtask button styles */
+#cancelToDoButton:hover {
+    background-color: #d32f2f;
+}
+
+#submitButton {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#submitButton:hover {
+    background-color: #0056b3;
+}
+
 .addSubtaskButton {
-    background-color: #9604a9; /* Brighter yellow background color */
-    color: #fff; /* Black text color */
-    border: none; /* Remove the button border */
-    padding: 10px 20px; /* Add padding to create some space around the text */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Change cursor to a hand on hover */
-  }
-  
-  /* Add Subtask button hover effect */
-  .addSubtaskButton:hover {
-    background-color: #2f8203b0; /* Darker blue background color on hover */
-  }
-  
+    background-color: #9604a9;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
-  #addSubtaskButton2 {
-      background-color: #68da2b7a; /* Darker blue background color on hover */
-      color: #fff; /* Black text color */
-      border: none; /* Remove the button border */
-    padding: 10px 20px; /* Add padding to create some space around the text */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Change cursor to a hand on hover */
-  }
-  
-  /* Add Subtask button hover effect */
-  #addSubtaskButton2:hover {
-      background-color: #414fe8b3; /* Brighter yellow background color */
-  }
-  
+.addSubtaskButton:hover {
+    background-color: #2f8203b0;
+}
+
+#addSubtaskButton2 {
+    background-color: #68da2b7a;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#addSubtaskButton2:hover {
+    background-color: #414fe8b3;
+}
